deploy: zya-han/zya-han.github.io-private@9ee37e0e67c1c6d517371e7cb6137f1971320fa6

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -398,9 +398,11 @@ blockquote {
 
     padding: 20px;
     padding-left: 50px;
+    box-sizing: border-box;
     
     position: relative;
     overflow: hidden;
+    min-height: 120px;
     
     p {
       font-size: 1rem;
