deploy: zya-han/zya-han.github.io-private@ae47b846c081b4efb37570fcd728ce546d5d5bda

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -402,7 +402,7 @@ blockquote {
     
     position: relative;
     overflow: hidden;
-    min-height: 120px;
+    min-height: 3rem;
     
     p {
       font-size: 1rem;
