--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -414,6 +414,7 @@ blockquote {
     cite {
       font-size: 0.8rem;
       margin-top: 0.6rem;
+      text-align: right;
       display: block;
       color: rgba(0, 0, 0, .66);
     }
