deploy: zya-han/zya-han.github.io-private@e08c6b48346d9e38c507dad8832b3330812cddb7

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -36,12 +36,9 @@ th, tr, td {
     border-radius: 8px;
     text-align: center;
     margin-top: 2rem;
+    font-size: 2rem;
     font-weight: bold;
-}
-  
-.buy-button a {
-    color: #d94f4f;
-    text-decoration: none;
+    font-family: "42dot Sans", sans-serif;
 }
 
 .mainheading {
