deploy: zya-han/zya-han.github.io-private@7a1f2ee504889ecf653bfe540b3c7c0f4009caf1

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -271,9 +271,14 @@ span.post-read {
     color: rgba(0, 0, 0, .66) !important; 
 }
 
-span.post-comments a span.disqus-comment-count {
+/* span.post-comments a span.disqus-comment-count {
+    color: rgba(0, 0, 0, .66) !important;
+} */
+
+span.post-comments a {
     color: rgba(0, 0, 0, .66) !important;
 }
+
 
 span.post-read-more {
     align-items: center;
