deploy: zya-han/zya-han.github.io-private@3f0431386fcd7dd02b29858658c5d669c2decdd1

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -31,14 +31,17 @@ th, tr, td {
 }
 
 .buy-button {
-    background: #f4f4f4;
+    background: #00ab6b;
     padding: 1rem;
     border-radius: 8px;
-    border: solid #999 2px;
     text-align: center;
     margin-top: 2rem;
     font-weight: bold;
     font-family: "42dot Sans", sans-serif;
+}
+
+.buy-button a {
+    color: #f4f4f4;
 }
 
 .mainheading {
