--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,7 +12,7 @@ License: https://www.wowthemes.net/freebies-license/
 
 table {    
     border-collapse: collapse;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     thead {
         background: rgba(0, 0, 0, .05);
         th {
@@ -44,6 +44,10 @@ th, tr, td {
 
 .buy-button a {
     color: #f4f4f4;
+}
+
+.buy-button a:hover {
+    color: #fff;
 }
 
 .mainheading {
