deploy: zya-han/zya-han.github.io-private@f7de81ac617ce2824b550e0efe74e3f3ad93e399

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -955,7 +955,7 @@ span.navigation {
     border-radius: 4px;
 }
   
-.pagination-inline span.page.current {
+.pagination-inline .current {
     background-color: #00ab6b;
     color: #fff;
     border: none; /* 👉 현재 페이지도 테두리는 없음 */
