deploy: zya-han/zya-han.github.io-private@5b36417613b1b2e36e64cdc811183f3b348b4e75

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -124,6 +124,7 @@ th, tr, td {
 }
   
 .category-posts a {
+    font-family: "42dot Sans", sans-serif;
     font-weight: bold;
     text-decoration: none;
     color: #333;
