deploy: zya-han/zya-han.github.io-private@d6b6c6b0e3dcf35a60b6521b4a00b31082f73f62

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -112,6 +112,7 @@ th, tr, td {
     max-width: 800px;
     margin: 2rem auto;
     padding: 0 1rem;
+    font-family: "42dot Sans", sans-serif;
 }
   
 .category-posts ul {
@@ -124,8 +125,7 @@ th, tr, td {
 }
   
 .category-posts a {
-    font-family: "42dot Sans", sans-serif;
-    font-weight: bold;
+    /* font-weight: bold; */
     text-decoration: none;
     color: #333;
 }
