deploy: zya-han/zya-han.github.io-private@d2630003600e56b221250a63492f25acec653e17

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -134,19 +134,11 @@ th, tr, td {
     color: #00ab6b;
 }
   
-.post-date {
+.category-post-date {
     margin-left: 0.5rem;
     color: #888;
     font-size: 0.9rem;
 }
-  
-.post-date {
-    display: block;
-    font-size: 0.9rem;
-    color: #aaa;
-    margin-top: 0.3rem;
-}
-
 
 .mainheading {
     padding: 1rem 0rem;
