deploy: zya-han/zya-han.github.io-private@78b50adeae6185f8da9ef303c269749e883f54bc

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -457,7 +457,7 @@ span.post-read-more a:hover {
 }
 
 .mainheading a.sitetitle {
-    font-family: "Song Myung", serif;
+    color: black;
 }
 
 .mainheading p.lead {
