deploy: zya-han/zya-han.github.io-private@1b7872564916cedb848bce4d5af2e1ba25d28aa1

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -298,9 +298,15 @@ section.recent-posts {
 
 .article-post ol ol,
 .article-post ul ul {
-    list-style: disc;
+    list-style: circle;  /* 2단계 - 동그라미 */
     margin-bottom: 0rem;
 }
+
+.article-post ol ol ol,
+.article-post ul ul ul {
+    list-style: square; /* 3단계 - 네모 */
+}
+
 
 @media (min-width:576px) {
     .card-columns.listfeaturedtag {
