deploy: zya-han/zya-han.github.io-private@a2e5fc0284a0b06e20f163ce79c539f8b5bb1082

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1482,6 +1482,10 @@ iframe {
       font-size: 1.5rem;
       padding: 0.25rem 0.75rem;
     }
+
+    .search-toggle svg {
+        fill: #666 !important;
+      }
 }
 
 @media (max-width: 991px) {
