deploy: zya-han/zya-han.github.io-private@51f0167b7823874a919ee9703fac30caabbd2cf3

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1481,6 +1481,7 @@ iframe {
       border: none;
       font-size: 1.5rem;
       padding: 0.25rem 0.75rem;
+      color: #666 !important;
     }
 
     .search-toggle svg {
