--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1485,8 +1485,10 @@ iframe {
     }
 
     .search-toggle svg {
-        fill: #666 !important;
-      }
+      fill: #666 !important;
+      stroke: #666 !important;
+      color: #666 !important;
+    }
 }
 
 @media (max-width: 991px) {
@@ -1563,5 +1565,12 @@ iframe {
   
     .search-toggle {
       right: 0rem;
+      color: #666 !important;
+    }
+
+    .search-toggle svg {
+      fill: #666 !important;
+      stroke: #666 !important;
+      color: #666 !important;
     }
   }
