deploy: zya-han/zya-han.github.io-private@629d38d0bc8f0aaf2d2775146bf4566689ba5890

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1374,10 +1374,10 @@ iframe {
     }
   
     /* 본문 여백 줄이기 */
-    .article-post {
+    /* .article-post {
       padding-left: 0.8rem;
       padding-right: 0.8rem;
-    }
+    } */
 
     table, th, td {
         font-size: 0.95rem;
