--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1504,7 +1504,7 @@ iframe {
       visibility: hidden;
       opacity: 0;
       pointer-events: none;
-      transition: opacity 0.3s ease, visibility 0.3s ease;
+      /* transition: opacity 0.3s ease, visibility 0.3s ease; */
   
       padding: 1rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
