deploy: zya-han/zya-han.github.io-private@e6576bd46d94c7392db4742887fd844c843f00e3

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -9,6 +9,13 @@ License: https://www.wowthemes.net/freebies-license/
 
 }
 
+hanja {
+    vertical-align: super;
+    font-size: 80%;
+    color: rgba(0, 0, 0, .50);
+}
+
+
 table {    
     border-collapse: collapse;
     margin-left: auto;
