deploy: zya-han/zya-han.github.io-private@4cf20e53064da11fe0cd0579b8353a0ae1c54587

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -20,6 +20,7 @@ License: https://www.wowthemes.net/freebies-license/
 
 /* 한자 위첨자 */
 hanja {
+    display: inline;
     vertical-align: super;
     font-size: 80%;
     color: rgba(0, 0, 0, .50);
