deploy: zya-han/zya-han.github.io-private@f79f7c530aa128e5209583dbbaabbbc70bf214d4

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -19,14 +19,11 @@ License: https://www.wowthemes.net/freebies-license/
 }
 
 /* 한자 위첨자 */
-.hanja-word {
-    display: inline;
-}
-  
-.hanja-sup {
+.hanja-word::after {
+    content: attr(data-hanja);
     font-size: 80%;
     vertical-align: super;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, .50);
 }
 
 table {    
