--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -23,7 +23,26 @@ License: https://www.wowthemes.net/freebies-license/
     content: attr(data-hanja);
     font-size: 80%;
     vertical-align: super;
-    color: rgba(0, 0, 0, .50);
+    color: rgba(0, 0, 0, .65);
+}
+
+.person {
+    color:crimson;
+    font-weight: 700;
+}
+
+.article-post a {
+    color: #00ab6b;
+    transition: all 0.2s;
+    background-color:lemonchiffon;
+    text-decoration: underline;
+    text-decoration-color:lightgrey;
+    text-decoration-style:wavy;
+}
+
+.toc a {
+    background-color: white;
+    text-decoration: none;
 }
 
 table {    
