--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -31,7 +31,8 @@ License: https://www.wowthemes.net/freebies-license/
     font-weight: 700;
 }
 
-.article-post a {
+.article-post a,
+.translation-note a {
     color: #00ab6b;
     transition: all 0.2s;
     background-color:lemonchiffon;
