deploy: zya-han/zya-han.github.io-private@dcfb9109291851b885ec9e9cbd852e3c5ceeb30d

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -23,7 +23,8 @@ License: https://www.wowthemes.net/freebies-license/
     content: attr(data-hanja);
     font-size: 80%;
     vertical-align: super;
-    color: rgba(0, 0, 0, .65);
+    color: inherit;
+    opacity: 0.75;
 }
 
 .person {
