deploy: zya-han/zya-han.github.io-private@394eb512eb5215660747520e57faf16606c9b2da

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -130,11 +130,23 @@ th, tr, td {
 }
   
 .category-card-image {
-    width: 200px;
-    height: 130px;
+    width: 180px;
+    height: auto;
     object-fit: cover;
     border-radius: 6px;
     margin-right: 1.5rem;
+}
+
+@media (max-width: 991px) {
+  .category-card-image {
+    width: 140px;
+  }
+}
+
+@media (max-width: 480px) {
+  .category-card-image {
+    width: 100px;
+  }
 }
   
 .category-card-text h1 {
