deploy: zya-han/zya-han.github.io-private@eb41b47334a886f2fcd5f596ad2257c37109063e

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -663,17 +663,20 @@ span.post-read-more a:hover {
 }
   
 /* 한국어 문서용 글꼴 */
-.article-post:lang(ko) {
+.article-post:lang(ko),
+span[lang="ko"] {
     font-family: "Gowun Batang", "Iansui", "HanaMinB", serif;
 }
   
 /* 영어 문서용 글꼴 */
-.article-post:lang(en) {
+.article-post:lang(en),
+span[lang="en"] {
     font-family: "Merriweather", Georgia, "Iansui", "HanaMinB", serif;
 }
 
 /* 중국어 문서용 글꼴 */
-.article-post:lang(zh) {
+.article-post:lang(zh),
+span[lang="zh"] {
     font-family: "Noto Sans SC", sans-serif;
 }
 
